Treat warnings as errors in C++ code if configure --enable-werror
When building with the automake scripts, pass -Werror option to the
compiler (if requested and supported) not only when compiling .c files
but also .cc ones.

* Makefile.am (AM_CXXFLAGS): Prepend $WERROR_CFLAGS.

--- a/Makefile.am
+++ b/Makefile.am
@@ -147,7 +147,7 @@ EXTRA_DIST += gc_badalc.cpp gc_cpp.cpp
 # Misc
 # ----
 
-AM_CXXFLAGS = @GC_CFLAGS@
+AM_CXXFLAGS = $(WERROR_CFLAGS) @GC_CFLAGS@
 AM_CFLAGS = $(WERROR_CFLAGS) @GC_CFLAGS@
 
 CFLAGS += $(CFLAGS_EXTRA)
