Pass -lrt linker option in CMake script on HP/UX, NetBSD and SunOS (fix of commit 54769e69e)
This is to match the relevant logic of configure.

* CMakeLists.txt (NEED_LIB_RT): New variable.
* CMakeLists.txt [CMAKE_USE_PTHREADS_INIT && ($host==.*-.*-hpux11.*
|| $host==.*-.*-netbsd.* || $CMAKE_C_COMPILER_ID STREQUAL==SunPro)]
(NEED_LIB_RT): Set to ON (true).
* CMakeLists.txt [NEED_LIB_RT] (LIBRT): Find library "rt".
* CMakeLists.txt [NEED_LIB_RT && LIBRT] (THREADDLLIBS_LIST): Append
$LIBRT.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,6 +145,7 @@ set(NODIST_SRC)
 set(ATOMIC_OPS_LIBS)
 set(ATOMIC_OPS_LIBS_CMAKE)
 set(THREADDLLIBS_LIST)
+set(NEED_LIB_RT)
 
 set(_HOST ${CMAKE_SYSTEM_PROCESSOR}-unknown-${CMAKE_SYSTEM})
 string(TOLOWER ${_HOST} HOST)
@@ -224,9 +225,13 @@ if (CMAKE_USE_PTHREADS_INIT)
   if (HOST MATCHES .*-.*-hpux11.*)
     message("Only HP/UX 11 POSIX threads are supported.")
     add_definitions("-D_POSIX_C_SOURCE=199506L")
+    set(NEED_LIB_RT ON)
   elseif (HOST MATCHES .*-.*-netbsd.*)
     message("Only on NetBSD 2.0 or later.")
     add_definitions("-D_PTHREADS")
+    set(NEED_LIB_RT ON)
+  elseif (CMAKE_C_COMPILER_ID STREQUAL "SunPro")
+    set(NEED_LIB_RT ON)
   endif()
   if (MSYS)
     # Does not provide process fork functionality.
@@ -254,6 +259,14 @@ elseif (CMAKE_USE_WIN32_THREADS_INIT)
 elseif (CMAKE_HP_PTHREADS_INIT OR CMAKE_USE_SPROC_INIT)
   message(FATAL_ERROR "Unsupported thread package")
 endif()
+
+# Some targets need -lrt linker option.
+if (NEED_LIB_RT)
+  find_library(LIBRT rt)
+  if (LIBRT)
+    set(THREADDLLIBS_LIST ${THREADDLLIBS_LIST} ${LIBRT})
+  endif()
+endif(NEED_LIB_RT)
 
 if (disable_handle_fork)
   add_definitions("-DNO_HANDLE_FORK")
