Link with rt library to get clock_gettime where necessary (a cherry-pick of commit ab1bfc33c from 'master')
Issue #450 (bdwgc).

This patch adds the logic to CMake and configure scripts to pass -lrt
option during linking to avoid unresolved clock_gettime on some hosts.

* CMakeLists.txt [!NEED_LIB_RT] (HAVE_CLOCK_GETTIME_DIRECTLY): Set
variable by check_function_exists(clock_gettime).
* CMakeLists.txt [!NEED_LIB_RT && !HAVE_CLOCK_GETTIME_DIRECTLY]
(NEED_LIB_RT): Set to ON.
* CMakeLists.txt (LIBRT): Refine comment.
* CMakeLists.txt (gc): Specify target_link_libraries regardless of
enable_threads.
* Makefile.am (libgc_la_LIBADD): Update comment.
* configure.ac (need_lib_rt): Define variable (and set to false).
* configure.ac [$THREADS==pthreads && ($host==*-*-hpux11*
|| $host==*-*-netbsd* || $host== *-*-solaris* || $host==*-*-osf*)]
(THREADDLLIBS): Do not add "-lrt" directly.
* configure.ac [$THREADS==pthreads && ($host==*-*-hpux11*
|| $host==*-*-netbsd* || $host== *-*-solaris* || $host==*-*-osf*)]
(need_lib_rt): Set to true.
* configure.ac [!need_lib_rt && !AC_LINK_IFELSE(clock_gettime)
&& AC_CHECK_LIB(rt,clock_gettime)] (need_lib_rt): Set to true.
* configure.ac [need_lib_rt] (THREADDLLIBS): Append "-lrt".

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -228,7 +228,16 @@ elseif (CMAKE_HP_PTHREADS_INIT OR CMAKE_USE_SPROC_INIT)
   message(FATAL_ERROR "Unsupported thread package")
 endif()
 
-# Some targets need -lrt linker option.
+# Check whether -lrt linker option is needed to use clock_gettime.
+if (NOT NEED_LIB_RT)
+  check_function_exists(clock_gettime HAVE_CLOCK_GETTIME_DIRECTLY)
+  if (NOT HAVE_CLOCK_GETTIME_DIRECTLY)
+    # Use of clock_gettime() probably requires linking with "rt" library.
+    set(NEED_LIB_RT ON)
+  endif()
+endif()
+
+# Locate and use "rt" library if needed (and the library is available).
 if (NEED_LIB_RT)
   find_library(LIBRT rt)
   if (LIBRT)
@@ -476,9 +485,7 @@ if (HAVE_DLADDR)
 endif()
 
 add_library(gc ${SRC})
-if (enable_threads)
-  target_link_libraries(gc PRIVATE ${THREADDLLIBS_LIST} ${ATOMIC_OPS_LIBS})
-endif()
+target_link_libraries(gc PRIVATE ${THREADDLLIBS_LIST} ${ATOMIC_OPS_LIBS})
 target_include_directories(gc INTERFACE
         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
         "$<INSTALL_INTERFACE:include>")
