--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -91,7 +91,7 @@ install:
 build_script:
 - cmd: if [%TARGET%]==[cmake] (
     cmake %CMAKE_OPTIONS% -Denable_werror=ON -DCFLAGS_EXTRA="%CFLAGS_EXTRA%" .
-    && cmake --build . --config %CMAKE_CONFIG% )
+    && cmake --build . --config %CMAKE_CONFIG% --verbose )
 - cmd: if [%TARGET%]==[nmake] (
     "C:\Program Files (x86)\Microsoft Visual %STUDIO_VERSION_EDITION%\VC\Auxiliary\Build\vcvarsall.bat" %ARCH%
     && nmake /f NT_MAKEFILE %NMAKE_OPTIONS% CFLAGS_EXTRA="/WX %CFLAGS_EXTRA%" )
