Travis CI: Turn on parallel mode in CMake test
Number of the parallel jobs: 4.

--- a/.travis.yml
+++ b/.travis.yml
@@ -821,7 +821,7 @@ script:
     cmake --build . --config $CMAKE_CONFIG;
   fi
 - if [[ "$CMAKE_CONFIG" != "" ]]; then
-    ctest --build-config $CMAKE_CONFIG -V;
+    ctest --build-config $CMAKE_CONFIG -j4 -V;
   fi
 - if [[ "$CC_FOR_CHECK" != "" ]]; then
     make -f $MAKEFILE_NAME $MAKEFILE_TARGETS_CHECK CC=$CC_FOR_CHECK
