Fix 'call to undeclared pthread_setname_np' errors in configure and cmake (a cherry-pick of commit 4489757f1 from 'master')
Issue #474 (bdwgc).

Clang 15 makes implicit function declarations an error by default
which leads to configure (and cmake script) falsely thinking
pthread_setname_np symbol is not present.

* CMakeLists.txt [CMAKE_USE_PTHREADS_INIT] (check_c_source_compiles):
Always define _GNU_SOURCE before include pthread.h (regardless of
__CYGWIN__, __linux__, __GLIBC__, __GNU__ macros).
* configure.ac [$THREADS==posix] (AC_TRY_COMPILE): Likewise.
* include/private/gc_priv.h [!_GNU_SOURCE
&& (HAVE_PTHREAD_SETNAME_NP_WITHOUT_TID
|| HAVE_PTHREAD_SETNAME_NP_WITH_TID_AND_ARG
|| HAVE_PTHREAD_SETNAME_NP_WITH_TID)] (_GNU_SOURCE): Define.

Co-authored-by: Ivan Maidanski <ivmai@mail.ru>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -450,6 +450,7 @@ endif()
 # pthread_setname_np, if available, may have 1, 2 or 3 arguments.
 if (CMAKE_USE_PTHREADS_INIT)
   check_c_source_compiles("
+#define _GNU_SOURCE 1\n
 #include <pthread.h>\n
 int main(void) { (void)pthread_setname_np(\"thread-name\"); return 0; }"
     HAVE_PTHREAD_SETNAME_NP_WITHOUT_TID)
@@ -458,6 +459,7 @@ int main(void) { (void)pthread_setname_np(\"thread-name\"); return 0; }"
     add_definitions("-DHAVE_PTHREAD_SETNAME_NP_WITHOUT_TID")
   else()
     check_c_source_compiles("
+#define _GNU_SOURCE 1\n
 #include <pthread.h>\n
 int main(void) {\n
   (void)pthread_setname_np(pthread_self(), \"thread-name-%u\", 0); return 0; }"
@@ -467,9 +469,7 @@ int main(void) {\n
       add_definitions("-DHAVE_PTHREAD_SETNAME_NP_WITH_TID_AND_ARG")
     else()
       check_c_source_compiles("
-#if defined(__linux__) || defined(__GLIBC__) || defined(__GNU__) || defined(__CYGWIN__)\n
 #define _GNU_SOURCE 1\n
-#endif\n
 #include <pthread.h>\n
 int main(void) {\n
   (void)pthread_setname_np(pthread_self(), \"thread-name\"); return 0; }"
