Fix gctest.o name in gctest_dyn_link rule of Makefile.direct (fix of commit 4a5c9217b)
* Makefile.direct (gctest_dyn_link): Change gcgctest.o (misspelled) to
gctest.o.

--- a/Makefile.direct
+++ b/Makefile.direct
@@ -398,7 +398,7 @@ test: check
 # Currently works only under SunOS5.  Requires GC_INIT call from statically
 # loaded client code.
 ABSDIR= `pwd`
-gctest_dyn_link: tests/gcgctest.o libgc.so
+gctest_dyn_link: tests/gctest.o libgc.so
 	$(CC) -L$(ABSDIR) -R$(ABSDIR) -o gctest_dyn_link tests/gctest.o -lgc -ldl -lthread
 
 gctest_irix_dyn_link: tests/gctest.o libirixgc.so
